--- a/style.css
+++ b/style.css
@@ -92,3 +92,12 @@ body {
 .li {
     margin-bottom: 10px;
 }
+
+.box {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    background-color: coral;
+    border-radius: 10px;
+    float: left;
+}
