--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ body {
 
 .code {
     font-family: monospace;
-    background-color: darkgray;
-    color: blue;
+    background-color: whitesmoke;
+    color: darkred;
 }
 
 .border-box {
@@ -100,4 +100,63 @@ body {
     background-color: coral;
     border-radius: 10px;
     float: right;
+}
+
+.flex-block {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: indianred;
+	text-align: center;
+	color: aliceblue;
+	height: 100px;
+	border-radius: 20px;
+	margin: auto;
+}
+
+
+
+@media screen and (min-width: 320px) {
+	.flex-block {
+		min-width: 300px;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	.flex-block {
+		width: 800px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.flex-block {
+		width: 1000px;
+	}
+}
+
+.flex {
+	display: flex;
+	margin-bottom: 20px;
+}
+
+.container_1 {
+	height: 75px;
+	width: 75px;
+	background-color: darkred;
+}
+
+.container_2 {
+	height: 100px;
+	width: 100px;
+	background-color: darkcyan;
+}
+
+.container_3 {
+	height: 125px;
+	width: 125px;
+	background-color: darkkhaki;
+}
+
+img {
+	width: 300px;
 }
