Отличие margin от padding и как они влияют на размеры блока Flex + grid

--- a/style.css
+++ b/style.css
@@ -142,7 +142,8 @@ body {
 .container_1 {
 	height: 75px;
 	width: 75px;
-	background-color: darkred;
+	background-color: darkkhaki;
+    border: 2px solid darkred;
 }
 
 .container_2 {
@@ -159,4 +160,12 @@ body {
 
 img {
 	width: 300px;
+}
+
+.grid {
+    display: grid;
+}
+
+.width {
+    width: 100%;
 }
